# python-project-lvl4

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  translations.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_tasklabelsrelations_task_labels_and_more.py
task_manager/templates/: base.html  delete.html  form.html  index.html
task_manager/templates/labels/: labels_list.html
task_manager/templates/statuses/: statuses_list.html
task_manager/templates/tasks/: task_view.html  tasks_list.html
task_manager/templates/users/: users.html  users_list.html
task_manager/users/: admin.py  forms.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
